--- a/src/app1/templates/app1/myarticlelist.html
+++ b/src/app1/templates/app1/myarticlelist.html
@@ -9,7 +9,7 @@
 
 {% block content_main %}
 <div class="yui-b">
-<div class="yui-g" id="artlist_top">
+<div class="yui-g" id="articlelist_top">
     <h2>{% trans "My articles" %} ( New Top 20 )</h2>
     <ul class="bbsartlist">
     {%for each in cur_articlelist%}
