--- a/src/app1/templates/app1/profile.html
+++ b/src/app1/templates/app1/profile.html
@@ -7,7 +7,7 @@
 
 <div class="yui-g" id="articletop">
 <h2>{% trans "Profile" %}</h2>
-<div id="artlist_top">
+<div id="articlelist_top">
 	<style type="text/css">
 		table {border-collapse:1px;border-spacing:1px;border: 1px}
     th { text-align:right;}
