--- a/src/media/css/main.css
+++ b/src/media/css/main.css
@@ -1,3 +1,163 @@
+/* -------------------------------------------------------------- 
+   
+   typography.css
+   * Sets up some sensible default typography.
+   
+-------------------------------------------------------------- */
+
+/* Default font settings. 
+   The font-size percentage is of 16px. (0.75 * 16px = 12px) */
+body { 
+  font-size: 75%;
+  color: #222; 
+  background: #fff;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
+
+/* Headings
+-------------------------------------------------------------- */
+
+h1,h2,h3,h4,h5,h6 { font-weight: normal; color: #111; }
+
+h1 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
+h2 { font-size: 2em; margin-bottom: 0.75em; }
+h3 { font-size: 1.5em; line-height: 1; margin-bottom: 1em; }
+h4 { font-size: 1.2em; line-height: 1.25; margin-bottom: 1.25em; }
+h5 { font-size: 1em; font-weight: bold; margin-bottom: 1.5em; }
+h6 { font-size: 1em; font-weight: bold; }
+
+h1 img, h2 img, h3 img, 
+h4 img, h5 img, h6 img {
+  margin: 0;
+}
+
+
+/* Text elements
+-------------------------------------------------------------- */
+
+p           { margin: 0 0 1.5em; }
+p img.left  { float: left; margin: 1.5em 1.5em 1.5em 0; padding: 0; }
+p img.right { float: right; margin: 1.5em 0 1.5em 1.5em; }
+
+a:focus, 
+a:hover     { color: #000; }
+a           { color: #009; text-decoration: underline; }
+
+blockquote  { margin: 1.5em; color: #666; font-style: italic; }
+strong      { font-weight: bold; }
+em,dfn      { font-style: italic; }
+dfn         { font-weight: bold; }
+sup, sub    { line-height: 0; }
+
+abbr, 
+acronym     { border-bottom: 1px dotted #666; }
+address     { margin: 0 0 1.5em; font-style: italic; }
+del         { color:#666; }
+
+pre 				{ margin: 1.5em 0; white-space: pre; }
+pre,code,tt { font: 1em 'andale mono', 'lucida console', monospace; line-height: 1.5; }
+
+
+/* Lists
+-------------------------------------------------------------- */
+
+li ul, 
+li ol       { margin:0 1.5em; }
+ul, ol      { margin: 0 1.5em 1.5em 1.5em; }
+
+ul          { list-style-type: disc; }
+ol          { list-style-type: decimal; }
+
+dl          { margin: 0 0 1.5em 0; }
+dl dt       { font-weight: bold; }
+dd          { margin-left: 1.5em;}
+
+
+/* Tables
+-------------------------------------------------------------- */
+
+table       { margin-bottom: 1.4em; width:100%; }
+th          { font-weight: bold; }
+thead th 		{ background: #c3d9ff; }
+th,td,caption { padding: 4px 10px 4px 5px; }
+tr.even td  { background: #e5ecf9; }
+tfoot       { font-style: italic; }
+caption     { background: #eee; }
+
+
+/* Misc classes
+-------------------------------------------------------------- */
+
+.small      { font-size: .8em; margin-bottom: 1.875em; line-height: 1.875em; }
+.large      { font-size: 1.2em; line-height: 2.5em; margin-bottom: 1.25em; }
+.hide       { display: none; }
+
+.quiet      { color: #666; }
+.loud       { color: #000; }
+.highlight  { background:#ff0; }
+.added      { background:#060; color: #fff; }
+.removed    { background:#900; color: #fff; }
+
+.first      { margin-left:0; padding-left:0; }
+.last       { margin-right:0; padding-right:0; }
+.top        { margin-top:0; padding-top:0; }
+.bottom     { margin-bottom:0; padding-bottom:0; }
+
+
+
+/* -------------------------------------------------------------- 
+   
+   forms.css
+   * Sets up some default styling for forms
+   * Gives you classes to enhance your forms
+   
+   Usage:
+   * For text fields, use class .title or .text
+   
+-------------------------------------------------------------- */
+
+label       { font-weight: bold; }
+fieldset    { padding:1.4em; margin: 0 0 1.5em 0; border: 1px solid #ccc; }
+legend      { font-weight: bold; font-size:1.2em; }
+
+
+/* Form fields
+-------------------------------------------------------------- */
+
+input.text, input.title,
+textarea, select {
+  margin:0.5em 0;
+  border:1px solid #bbb;
+}
+
+input.text:focus, input.title:focus,
+textarea:focus, select:focus {
+  border:1px solid #666;
+}
+
+input.text, 
+input.title   { width: 300px; padding:5px; }
+input.title   { font-size:1.5em; }
+textarea      { width: 390px; height: 250px; padding:5px; }
+
+
+/* Success, notice and error boxes
+-------------------------------------------------------------- */
+
+.error,
+.notice, 
+.success    { padding: .8em; margin-bottom: 1em; border: 2px solid #ddd; }
+
+.error      { background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4; }
+.notice     { background: #FFF6BF; color: #514721; border-color: #FFD324; }
+.success    { background: #E6EFC2; color: #264409; border-color: #C6D880; }
+.error a    { color: #8a1f11; }
+.notice a   { color: #514721; }
+.success a  { color: #264409; }
+
+
+
 body {background-color:#F0F0F0;}
 #custom-doc {background-color:#F4F2E0;}
 a {text-decoration:None;color:#5d5b46;}
@@ -24,7 +184,7 @@ a:hover {color:#000;text-decoration:underline;}
 
 #bd #yui-main {margin-top:0px;}
 
-#detail_ad1 {text-align:center;margin-bottom:10px;}
+#detail_ad1 {text-align:center;margin-bottom:10px; clear:left; float:left}
 #detail_ad2 {text-align:center;margin-bottom:10px;}
 
 .yui-g {margin-bottom:0px;}
@@ -56,11 +216,11 @@ color:#484848
 
 #conmain_index {}
 
-#artlist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:0px;padding-bottom:0px;}
-#artlist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
+#articlelist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:0px;padding-bottom:0px;}
+#articlelist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
 
-#bbsartlist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:10px;padding-bottom:4px;}
-#bbsartlist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
+#bbsarticlelist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:10px;padding-bottom:4px;}
+#bbsarticlelist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
 
 #articletop {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;margin-bottom:10px;padding-bottom:0px;}
 
@@ -74,10 +234,13 @@ overflow: hidden;
 }
 
 #content {background-color:#FEFDF0;padding:0px 30px 10px 30px;margin-bottom:0px;border-bottom:1px solid #CDCAA3;line-height:160%;}
-#content a {text-decoration:none;color:#7E0202;}
+#content a {text-decoration:underline;color:#d80000;}
 #content a:hover {text-decoration:underline;color:#d80000;}
 #content ul {margin-left:20px;}
 #content ul li {margin-bottom:6px;}
+#contentinfo p {font-weight:bold;margin-top:5px;margin-bottom:5px;}
+#contentinfo p a {color:#484848;font-weight:normal;text-decoration:underline;}
+#contentinfo p a:hover {color:#d80000;font-weight:bold;text-decoration:underline;}
 
 #bbscontent {background-color:#FEFDF0;padding:0px 10px 10px 10px;margin-bottom:0px;border-bottom:1px solid #CDCAA3;line-height:160%;}
 #bbscontent a {text-decoration:none;color:#7E0202;}
@@ -95,10 +258,14 @@ text-overflow:ellipsis;
 -o-text-overflow:ellipsis;
 overflow: hidden;
 }
-#con_articlelist h3 a{color:#5d5b46;font-size:large;}
-#con_articlelist h3 a:hover{color:#7E0202;text-decoration:none;}
+#con_articlelist h3 a{color:#484848;font-size:large;}
+#con_articlelist h3 a:hover{color:#d80000;text-decoration:none;}
+#con_articlelist p {padding-left:15px;font-weight:bold;margin-top:5px;margin-bottom:5px;}
+#con_articlelist p a {color:#484848;font-weight:normal;text-decoration:underline;}
+#con_articlelist p a:hover {color:#d80000;font-weight:bold;text-decoration:underline;}
+#con_articlelist p.abstract {font-weight:normal}
 #con_articlelist p.more {text-align:right;margin:0px 15px 0px 0px;}
-#con_articlelist p.more a{color:#D80000;font-weight:bold; text-decoration:none;}
+#con_articlelist p.more a{color:#d80000;font-weight:bold; text-decoration:none;}
 #con_articlelist p.more a:hover{color:#7E0202; text-decoration:none;}
 
 #postcomment {margin:0px;}
@@ -109,16 +276,16 @@ overflow: hidden;
 #articletop .comments li .messageh3 {float:left;}
 #articletop .comments li .message {float:left;margin:0px 10px 10px 10px;padding-left:10px;width:80%;line-height:160%;}
 
-#artlist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
-#artlist_top h2 .addpost:hover{color:#800;text-decoration:none;}
+#articlelist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
+#articlelist_top h2 .addpost:hover{color:#800;text-decoration:none;}
 
-#bbsartlist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
-#bbsartlist_top h2 .addpost:hover{color:#800;text-decoration:none;}
+#bbsarticlelist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
+#bbsarticlelist_top h2 .addpost:hover{color:#800;text-decoration:none;}
 
 div.pagination {padding:8px 0px 8px 0px;margin-bottom:0px;width:100%;text-align:center;float:left;font-size:10px;background-color:#FEFDF0;border-bottom:1px solid #CDCAA3;}
-div.pagination a {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;text-decoration: none; color: #d8325d;}
-div.pagination a:hover, div.pagination a:active {border:1px solid #ddd;color: #fff;background-color: #d8325d;}
-div.pagination span.current {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;font-weight: bold;background-color: #d8325d;color: #FFF;}
+div.pagination a {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;text-decoration: none; color: #d80000;}
+div.pagination a:hover, div.pagination a:active {border:1px solid #ddd;color: #fff;background-color: #d80000;}
+div.pagination span.current {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;font-weight: bold;background-color: #d80000;color: #FFF;}
 div.pagination span.disabled {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;color: #ccc;}
 
 .bbsartlist {margin:0px;padding:8px 0px 8px 0px;}
@@ -135,7 +302,7 @@ overflow: hidden;
 .bbsartlist li {list-style:none;BACKGROUND: url(/media/images/arrow.gif) no-repeat left center;padding:4px 4px 4px 12px;margin:0px 4px 0px 4px;border-bottom:1px dotted #CDCAA3;}
 .bbsartlist li:hover {background-color:#f2f0dc;}
 
-.artlist_ggad {text-align:center;}
+.articlelist_ad {text-align:center;}
 
 #sidebar {margin-top:0px;}
 #sidebar a {color:#484848;}
