列表页面、正文页面加入广告位 调整CSS 调整模板

--- a/src/app1/templates/app1/articlelist.html
+++ b/src/app1/templates/app1/articlelist.html
@@ -25,8 +25,11 @@
 <p class="abstract">{{each.abstract|safe}}</p>
 <p class="more"><a href="{{each.get_absolute_url}}" rel="nofollow">{% trans "read more..." %}</a></p>
 </li>{%endif%}
-{% if forloop.first or forloop.last %}
-{%if ads_articlelist_linkad%}<div class="articlelist_ad">{{ads_articlelist_linkad|safe}}</div>{%endif%}
+{% if forloop.first %}
+{%if ads_articlelist_linkad1%}<div class="articlelist_ad1">{{ads_articlelist_linkad1|safe}}</div>{%endif%}
+{% endif %}
+{% if forloop.last %}
+{%if ads_articlelist_linkad2%}<div class="articlelist_ad1">{{ads_articlelist_linkad2|safe}}</div>{%endif%}
 {% endif %}
 {%endfor%}
 </ul>
