--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -42,6 +42,8 @@
 	</div>
     
     <div id="ft" role="contentinfo">
+    <br/>
+    {% block searchbox2 %}{% endblock %}
     <p style="float:left;">&copy; copyright {{ g_blog.title }} <a href="/index.xml" target="_blank">RSS Feed</a><br/>
     Powered by <a href="http://code.google.com/p/gae-django-cms/" target="_blank" title="gae-django-cms">gae-django-cms</a> 
     &
