--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -42,7 +42,6 @@
 </div>
 {%endif%}
 
-
 <div class="sidebar_block">
 <h2>{% trans "Tags" %}</h2>
 <ul class="sidebar_list">
@@ -76,7 +75,23 @@
 </ul>
 </div>
 {%endif%}
-
 </div>
+{% endblock %}
 
+{% block searchbox2 %}
+<div class="searchbox2">
+	<form action="http://www.google.com/cse" id="cse-search-box" target="_blank">
+  	<div>
+	    <input type="hidden" name="cx" value="partner-pub-5012078247778040:2801037459" />
+	    <input type="hidden" name="ie" value="UTF-8" />
+	    <input type="text" name="q" size="55" />
+	    <input type="submit" name="sa" value=" Search " />
+  	</div>
+	</form>
+	<div id="queries"></div>
+</div>
+<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+<script type="text/javascript">google.load("elements", "1", {packages: "transliteration"});</script>
+<script type="text/javascript" src="http://www.google.com/cse/t13n?form=cse-search-box&t13n_langs=en"></script>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
 {% endblock %}
