--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -12,19 +12,16 @@
 
 <div class="yui-g" id="articletop">
 <h2 title="{{obj.title|safe}}">{{obj.title|safe}}</h2>
-{% if obj.profile.pub_ads %}
-<div class="yui-u first" id="detail_ad1">
-{{obj.profile.art_left|safe}}
-</div>
-{% else %}
 {%if ads_articledetail_left_top%}<div class="yui-u first" id="detail_ad1">
 {{ads_articledetail_left_top|safe}}
 </div>{%endif%}
-{%endif%}
 
 <div id="content">
 {{obj.content|safe}}
 <div class="clear"></div>
+{%if ads_articledetail_linkad1%}<div class="yui-u first" id="detail_ad2">
+{{ads_articledetail_linkad1|safe}}
+</div>{%endif%}
 <p class="permalink">{% trans "Permalink" %} http://{{current_site.domain}}{{obj.short_url}}</p>
 <div id="contentinfo">
 <p>{%if obj.tags%}{% trans " Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %},&nbsp{% endif %}{%endfor%}{%endif%}</p>
@@ -41,45 +38,6 @@
 {% endifequal %}
 {% endif %}</p>
 {% endif %}
-
-{%if not obj.commentclosed%}
-<a name="postcomment"></a>
-
-<hr/>
-<h3>{% trans "Like what you read?" %} 
-{% if user.is_authenticated %}
-<script language="javascript" type="text/javascript">  
-//
-function show_post_comment(){
-    document.getElementById("postcomment2").style.display = "block";
-}
-//
-function replyto(somebd,commentkey){
-    show_post_comment();
-	document.getElementById("id_toID").value = commentkey;
-    document.getElementById("id_message").value = "To "+somebd+":\n";
-}
-</script> 
-<a href="#postcomment" onclick='show_post_comment();'>{% trans "Leave a comment" %}</a>
-{%else%}
-<a href="{{continue_url}}">{% trans "Secure login with google account" %}</a> {% trans "Leave a comment" %}
-{%endif%}
-</h3>
-
-<div id="postcomment2" {%if not form.name.data%}style="display:None;"{%endif%}>
-
-<form action="" method="POST">
-<INPUT type="hidden" id="id_toID" name="toID" value="">
-<p>{%if form.name.errors%}{{form.name.errors}}<br/>{%endif%}<label for="id_name">{{form.name.label}}: </label> {{form.name}} {% trans "*required" %}<br/>
-{%if form.web.errors%}{{form.web.errors}}<br/>{%endif%}<label for="id_web">{{form.web.label}}: </label> {{form.web}} {{form.web.help_text}}<br/>
-{%if form.message.errors%}{{form.message.errors}}<br/>{%endif%}<label for="id_message">{{form.message.label}}: {% trans "*required" %} ({{form.message.help_text}})</label> <br/>{{form.message}} </p>
-
-<p><input type="submit" style="width: 90px" value="{% trans 'Submit' %}" /></p>
-</form>
-
-</div>
-{%endif%}
-
 </div>
 </div>
 
@@ -96,6 +54,44 @@ function replyto(somebd,commentkey){
     </ul>    
     </div>
 </div>
+
+{%if not obj.commentclosed%}
+<hr/>
+<div class="yui-g" id="articletop">
+{% if user.is_authenticated %}
+<script language="javascript" type="text/javascript">  
+//
+function show_post_comment(){
+    document.getElementById("postcomment2").style.display = "block";
+}
+//
+function replyto(somebd,commentkey){
+    show_post_comment();
+	document.getElementById("id_toID").value = commentkey;
+    document.getElementById("id_message").value = "To "+somebd+":\n";
+}
+
+$(function() {
+    show_post_comment();
+});
+</script> 
+<h2><a href="#postcomment" onclick='show_post_comment();'>{% trans "Leave your comment" %}</a></h2>
+<ul class="comments">
+<div id="postcomment2" {%if not form.name.data%}style="display:None;"{%endif%}>
+<form action="" method="POST">
+<INPUT type="hidden" id="id_toID" name="toID" value="">
+<p>{%if form.name.errors%}{{form.name.errors}}<br/>{%endif%}<label for="id_name">{{form.name.label}}: </label> {{form.name}} {% trans "*required" %}<br/>
+{%if form.message.errors%}{{form.message.errors}}<br/>{%endif%}<label for="id_message">{{form.message.label}}: {% trans "*required" %} ({{form.message.help_text}})</label> <br/>{{form.message}} </p>
+<p><input type="submit" style="width: 90px" value="{% trans 'Submit' %}" /></p>
+</form>
+</div>
+</ul>
+{%else%}
+<h2><a href="{{continue_url}}">{% trans "Secure login with google account to leave your comment..." %}</a></h2>
+{%endif%}
+</div>
+{%endif%}
+
 {%if commentlist%}
 <a name="comments"></a>
 <div class="yui-g" id="articletop">
