--- a/src/app1/templates/app1/index.html
+++ b/src/app1/templates/app1/index.html
@@ -41,7 +41,7 @@ $(function() {
 {% block content_main %}
 <div class="yui-b" id="conmain_index">
 <div class="yui-g">
-    <div class="yui-u first" id="ggad_index">
+    <div class="yui-u first" id="index_ad">
     {%if ads_index_focus_slideshow%}{{ads_index_focus_slideshow|safe}}{%endif%}
     </div>
     <div class="yui-u cate">
