--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -55,6 +55,6 @@
     </div>
     
 </div>
-{%if g_blog.analytics%}{{g_blog.analytics|safe}}{%endif%}
+{% block analytics %}{% endblock %}
 </body>
 </html>
