--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -12,16 +12,36 @@
 
 <div class="yui-g" id="articletop">
 <h2 title="{{obj.title|safe}}">{{obj.title|safe}}</h2>
-{%if ads_articledetail_left_top%}<div class="yui-u first" id="detail_ad1">
-{{ads_articledetail_left_top|safe}}
-</div>{%endif%}
+<div class="yui-u first" id="detail_ad1">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5012078247778040";
+/* 正文快广告 */
+google_ad_slot = "6719152938";
+google_ad_width = 336;
+google_ad_height = 280;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
 
 <div id="content">
 {{obj.content|safe}}
 <div class="clear"></div>
-{%if ads_articledetail_linkad1%}<div class="yui-u first" id="detail_ad2">
-{{ads_articledetail_linkad1|safe}}
-</div>{%endif%}
+<div class="yui-u first" id="detail_ad2">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5012078247778040";
+/* 正文底部链接单元 */
+google_ad_slot = "9761965947";
+google_ad_width = 728;
+google_ad_height = 15;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
 <p class="permalink">{% trans "Permalink" %} http://{{current_site.domain}}{{obj.short_url}}</p>
 <div id="contentinfo">
 <p>{%if obj.tags%}{% trans " Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %},&nbsp{% endif %}{%endfor%}{%endif%}</p>
