--- a/src/media/css/main.css
+++ b/src/media/css/main.css
@@ -217,15 +217,12 @@ color:#484848
 #conmain_index {}
 
 #articlelist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:0px;padding-bottom:0px;}
-#articlelist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
-
-#bbsarticlelist_top {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;border-bottom:1px solid #CDCAA3;margin-bottom:10px;padding-bottom:4px;}
-#bbsarticlelist_top h2{margin:3px;padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
+#articlelist_top h2{padding:12px 0px 20px 12px;font-size:large;color:#d80000;}
 
 #articletop {background:url(/media/images/articletopbg.gif) 0 0 no-repeat #FEFDF0;border-left:1px solid #CDCAA3; border-right:1px solid #CDCAA3;margin-bottom:10px;padding-bottom:0px;}
 
 blockquote {border-left:2px solid #CDCAA3;font-style:normal;line-height:120%;padding-left:8px;margin:20px 30px 0px 30px;}
-#articletop h2 {color:#d80000;margin:3px;padding:12px 0px 8px 12px;font-size:large;
+#articletop h2 {color:#d80000;padding:12px 0px 8px 12px;font-size:large;
 width: 96%;
 white-space:nowrap;
 text-overflow:ellipsis;
@@ -270,8 +267,6 @@ overflow: hidden;
 
 #articlelist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
 #articlelist_top h2 .addpost:hover{color:#800;text-decoration:none;}
-#bbsarticlelist_top h2 .addpost {color:#880;BACKGROUND: url(/media/images/icon_addlink.gif) no-repeat left center;padding-left:15px;margin-left:10px;}
-#bbsarticlelist_top h2 .addpost:hover{color:#800;text-decoration:none;}
 
 div.pagination {padding:8px 0px 8px 0px;margin-bottom:0px;width:100%;text-align:center;float:left;font-size:10px;background-color:#FEFDF0;border-bottom:1px solid #CDCAA3;}
 div.pagination a {padding: 2px 5px 2px 5px;margin-right: 2px;border: 1px solid #ddd;text-decoration: none; color: #d80000;}
