--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock %} - {{ g_blog.title }}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     {%if g_blog.head_metas%}{{g_blog.head_metas|safe}}{%endif%}
-    <link rel="stylesheet" href="/media/css/reset-fonts-grids.css" type="text/css" />
+    <link rel="stylesheet" href="http://yui.yahooapis.com/2.9.0/build/reset-fonts-grids/reset-fonts-grids.css" type="text/css" />
     <style type="text/css">
     #custom-doc { width:74.54em;*width:72.74em;width:969px;min-width:969px; margin:auto; text-align:left; }
     </style>   
