--- a/src/app1/templates/app1/index.html
+++ b/src/app1/templates/app1/index.html
@@ -69,6 +69,20 @@ $(function() {
 {%endfor%}
 </div>
 
+<div class="articlelist_ad">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5012078247778040";
+/* 列表底部横幅 */
+google_ad_slot = "6909027565";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+
 </div>
 
 {% endblock %}
