添加详细页底部banner广告

--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -75,6 +75,20 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     </div>
 </div>
 
+<div class="articlelist_ad">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5012078247778040";
+/* 列表底部横幅 */
+google_ad_slot = "6909027565";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+
 {%if not obj.commentclosed%}
 <hr/>
 <div class="yui-g" id="articletop">
@@ -133,5 +147,6 @@ $(function() {
 </div>
 {%endif%}
 </div>
+
 
 {% endblock %}
