--- a/src/media/css/main.css
+++ b/src/media/css/main.css
@@ -329,4 +329,4 @@ overflow: hidden;
 #slideshow div.prev{z-index:9;}
 #slideshow div img{display:block;border:0;margin-bottom:10px;height:100%;width:100%;}
 #slideshow div span{text-align:center;display:none;position:absolute;bottom:0;left:0;height:40px;line-height:40px;background:#000;color:#fff;width:100%;}
-#slideshow div.current span{display:block;}
+#slideshow div.current span{display:block;font-weight:bold;}
