将JS改为document.write异步加载

--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -22,6 +22,9 @@
 		</div>
 	</form>
 </div>
+<script language="JavaScript">
+document.write('<script type="text/javascript" src="http://www.google.com/jsapi"></scr'+'ipt>' + '<script type="text/javascript">google.load("elements", "1", {packages: "transliteration"});</scr'+'ipt>'+'<script type="text/javascript" src="http://www.google.com/cse/t13n?form=cse-search-box&t13n_langs=en"></scr'+'ipt>'+'<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></scr'+'ipt>');
+</script>
 {% endblock %}
 
 {% block content %}
