--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/media/css/main.css" type="text/css" />
     {% endblock %}
     {% block js %}
-    <script type="text/javascript" src="{%if g_blog.googlejquery%}{{g_blog.googlejquery|safe}}{%else%}/media/js/jquery.min.js{%endif%}"></script>
+    <script type="text/javascript" src="{%if g_blog.googlejquery%}{{g_blog.googlejquery|safe}}{%else%}http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js{%endif%}"></script>
     {% endblock %}
     {% block extra-head %}{% endblock %}    
 </head>
