1. 将Google的Custom Search Engine的ID改为自己的CSE 2. 删除页面中无用的JS

--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -15,7 +15,7 @@
 <div class="searchbox">
 	<form action="http://www.google.com/cse" target="_blank" id="cse-search-box">
 		<div>
-	    <input type="hidden" name="cx" value="{% if g_blog.google_cse_cx %}{{g_blog.google_cse_cx|safe}}{% else %}009677936332633277893:-nyho-cdiwa{% endif %}" />
+	    <input type="hidden" name="cx" value="partner-pub-5012078247778040:6066178532" />
 	    <input type="hidden" name="ie" value="UTF-8" />
 	    <input type="text" name="q" size="26" />
 	    <input type="submit" name="sa" value="{% trans ' Google ' %}" />
