0. 采集时增加采集document的link属性 1. 加入slideshow的txt文件 2. Entry模型加入original_link和original_author属性 3. 修改页面模板，加入original_link和original_author属性的显示

--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -58,7 +58,7 @@ document.write('<script type="text/javascript" src="http://www.google.com/jsapi"
 <div class="sidebar_block">
 <h2>{% trans "Finance Market" %}</h2>
 <script language="JavaScript">
-document.write('<script src="http://widgets.macroaxis.com/widgets/url.jsp?t=26&s=FTSE,000001.SS,HSI,N225,NYA,IXIC,GSPC"></scr'+'ipt>');
+document.write('<script src="http://widgets.macroaxis.com/widgets/url.jsp?t=26&s=FTSE,N225,NYA,IXIC,GSPC"></scr'+'ipt>');
 </script>
 </div>
 {%endif%}
