--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -46,8 +46,11 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <div id="contentinfo">
 <p>{%if obj.tags%}{% trans " Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %},&nbsp{% endif %}{%endfor%}{%endif%}</p>
 <p>{% trans "Category:" %} <a href="{{obj.category.get_absolute_url}}" title="{{obj.category.name|safe}}">{{obj.category.name|safe}}</a>&nbsp&nbsp
-{% trans " Author:" %} <a href="{{obj.profile.get_absolute_url}}" title="{{obj.profile.displayname|safe}} {% trans 'Profile' %}" rel="nofollow">{{obj.profile.displayname|safe}}</a>&nbsp&nbsp{% trans " Date:" %} {{obj.pub_time|date:"d/m/Y"}}</p>
+{%if obj.original_author %}{% trans " Author:" %} {{obj.original_author|safe}}&nbsp&nbsp{%endif%}{% trans " Date:" %} {{obj.pub_time|date:"d/m/Y"}}</p>
+<p class="permalink">{% trans "Permalink: " %} http://{{current_site.domain}}{{obj.short_url}}</p>
+<p class="permalink">{% trans "Originlink: " %} {{obj.original_link|safe}}</p>
 </div>
+
 {% if user.is_authenticated %}
 <p>{% if user.is_superuser %}
 {% trans "Administration" %}: <a href='{% url app1.views.edit_article key=obj.key %}'>{% trans "Edit" %}</a>
