--- a/src/app1/templates/app1/detail.html
+++ b/src/app1/templates/app1/detail.html
@@ -44,7 +44,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </div>
 <div class="clear"></div>
 <div id="contentinfo">
-<p>{%if obj.tags%}{% trans " Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag}}">{{tag}}</a>{% if not forloop.last %},&nbsp{% endif %}{%endfor%}{%endif%}</p>
+<p>{%if obj.tags%}{% trans " Tags" %}: {%for tag in obj.tags%}<a href="{% url app1.views.tag_article tag %}" title="{{tag|safe}}">{{tag|safe}}</a>{% if not forloop.last %},&nbsp{% endif %}{%endfor%}{%endif%}</p>
 <p>{% trans "Category:" %} <a href="{{obj.category.get_absolute_url}}" title="{{obj.category.name|safe}}">{{obj.category.name|safe}}</a>&nbsp&nbsp
 {%if obj.original_author %}{% trans " Author:" %} {{obj.original_author|safe}}&nbsp&nbsp{%endif%}{% trans " Date:" %} {{obj.pub_time|date:"d/m/Y"}}</p>
 <p class="permalink">{% trans "Permalink: " %} http://{{current_site.domain}}{{obj.short_url}}</p>
