--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}Page not found{% endblock %}
 
+{% block extra-head %}<meta http-equiv="refresh" content="5; url=/">{% endblock %} 
+
 {% block content %}
-The page you requested could not be found.
+<div align="center">
+<a style="display: block;" href="/" target="_top">
+<img src="https://lh5.googleusercontent.com/-0q-D4LCSgvI/TmCPhe6vRCI/AAAAAAAAABU/FGANjQCh6-w/s800/404.jpg" height="400" width="560" align="center"/>
+</a>
+</div>
 {% endblock %}
