--- a/src/app1/templates/app1/base.html
+++ b/src/app1/templates/app1/base.html
@@ -104,4 +104,5 @@ document.write('<script type="text/javascript" src="http://www.google.com/jsapi"
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-</script>{% endblock %}
+</script>
+{% endblock %}
