--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,7 @@
 <head>
     <title>{% block title %}{% endblock %} - {{ g_blog.title }}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="msvalidate.01" content="694FB5254404290635F167570F9CA2D9" />
     {%if g_blog.head_metas%}{{g_blog.head_metas|safe}}{%endif%}
     <link rel="stylesheet" href="http://yui.yahooapis.com/2.9.0/build/reset-fonts-grids/reset-fonts-grids.css" type="text/css" />
     <style type="text/css">
